--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,6 +21,18 @@
               <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
               <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
+              <td>コメント数：<%= @book.book_comments.count %></td>
+        </tr>
+        <tr>
+          <%= @book.book_comments.each do |book_comment| %>
+            <td><%= image_tag book_comment.user.get_profile_image(100,100) %></td>
+            <td><%= book.comment %></td>
+            <td>
+              <% if book_comment.user == current_user %>
+                <%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), class: "btn btn-danger", method: :delete %>
+              <% end %>
+            </td>
+          <% end %>
         </tr>
       </table>
     </div>
