--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,7 +24,7 @@
               <td>コメント数：<%= @book.book_comments.count %></td>
         </tr>
         <tr>
-          <%= @book.book_comments.each do |book_comment| %>
+          <% @book.book_comments.each do |book_comment| %>
             <td><%= image_tag book_comment.user.get_profile_image(100,100) %></td>
             <td><%= book.comment %></td>
             <td>
@@ -33,6 +33,12 @@
               <% end %>
             </td>
           <% end %>
+            <td>
+              <%= form_with model: [@book, @book_comment] do |f| %>
+                <%= f.text_area :comment, rows: '5'%><br>
+                <%= f.submit "送信する" %>
+              <% end %>
+            </td>
         </tr>
       </table>
     </div>
