--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -11,21 +11,21 @@
     <% books.each do |book| %>
       <tr>
         <td><%= link_to user_path(book.user) do %>
-          <%= image_tag book.user.get_profile_image, size:'50x50' %>
+          <%= image_tag book.user.get_profile_image(50,50) %>
           <% end %>
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <% if @book.favorited_by?(current_user) %>
+        <% if book.favorited_by?(current_user) %>
           <td>
-            <%= link_to book_favorites_path(@book), method: :delete do %>
-              ♥<%= @book.favorites.count %>
+            <%= link_to book_favorites_path(book), method: :delete do %>
+              <p class="text-danger">♥<%= book.favorites.count %></p>
             <% end %>
           </td>
         <% else %>
           <td>
-            <%= link_to  book_favorites_path(@book), method: :post do %>
-              ♡<%= @book.favorites.count %>
+            <%= link_to  book_favorites_path(book), method: :post do %>
+              ♥<%= book.favorites.count %>
             <% end %>
           </td>
         <% end %>
