--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,7 @@
   		<table class='table'>
   		  <tr>
           <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+            <%= image_tag @book.user.get_profile_image(100,100) %><br>
             <%= @book.user.name %>
             <% end %>
           </td>
@@ -21,26 +21,34 @@
               <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
               <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
+            <% if @book.favorited_by?(current_user) %>
+              <td>
+                <%= link_to book_favorites_path(@book), method: :delete do %>
+                  <p class="text-danger">♥<%= @book.favorites.count %></p>
+                <% end %>
+              </td>
+            <% else %>
+              <td>
+                <%= link_to  book_favorites_path(@book), method: :post do %>
+                  ♥<%= @book.favorites.count %>
+                <% end %>
+              </td>
+              <% end %>
               <td>コメント数：<%= @book.book_comments.count %></td>
         </tr>
-        <tr>
+      </table>
           <% @book.book_comments.each do |book_comment| %>
-            <td><%= image_tag book_comment.user.get_profile_image(100,100) %></td>
-            <td><%= book.comment %></td>
-            <td>
+              <%= image_tag book_comment.user.get_profile_image(50,50) %>
+              <%= book_comment.comment %>
               <% if book_comment.user == current_user %>
                 <%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), class: "btn btn-danger", method: :delete %>
-              <% end %>
-            </td>
+              <% end %><br>
+              <%= book_comment.user.name %>
           <% end %>
-            <td>
               <%= form_with model: [@book, @book_comment] do |f| %>
-                <%= f.text_area :comment, rows: '5'%><br>
-                <%= f.submit "送信する" %>
+                <%= f.text_area :comment%><br>
+                <%= f.submit "送信" %>
               <% end %>
-            </td>
-        </tr>
-      </table>
     </div>
   </div>
 </div>
