--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -43,7 +43,7 @@
               <% if book_comment.user == current_user %>
                 <%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), class: "btn btn-danger", method: :delete %>
               <% end %><br>
-              <%= book_comment.user.name %>
+              <%= book_comment.user.name %><br>
           <% end %>
               <%= form_with model: [@book, @book_comment] do |f| %>
                 <%= f.text_area :comment%><br>
