--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,4 +54,9 @@
       </div>
     </div>
   </nav>
+  <div class="container">
+      <ul class=text-center>
+      <%= render 'searches/search' %>
+      </ul>
+  </div>
 </header>
