--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,19 +16,11 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <% if book.favorited_by?(current_user) %>
-          <td>
-            <%= link_to book_favorites_path(book), method: :delete do %>
-              <p class="text-danger">♥<%= book.favorites.count %></p>
-            <% end %>
-          </td>
-        <% else %>
-          <td>
-            <%= link_to book_favorites_path(book), method: :post do %>
-              ♥<%= book.favorites.count %>
-            <% end %>
-          </td>
-        <% end %>
+        <td>
+          <div id = "favorite_<%= book.id %>">
+            <%= render partial: "favorites/favorite", locals: {book: book} %>
+          </div>
+        </td>
         <td>コメント数：<%= book.book_comments.count %></td>
       </tr>
     <% end %>
