--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,34 +21,17 @@
               <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
               <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
-            <% if @book.favorited_by?(current_user) %>
-              <td>
-                <%= link_to book_favorites_path(@book), method: :delete do %>
-                  <p class="text-danger">♥<%= @book.favorites.count %></p>
-                <% end %>
-              </td>
-            <% else %>
-              <td>
-                <%= link_to  book_favorites_path(@book), method: :post do %>
-                  ♥<%= @book.favorites.count %>
-                <% end %>
-              </td>
-              <% end %>
-              <td>コメント数：<%= @book.book_comments.count %></td>
+            <td>
+              <div id = "favorite_<%= @book.id %>">
+                <%= render partial: "favorites/favorite", locals: {book: @book} %>
+              </div>
+            </td>
+            <td>コメント数：<%= @book.book_comments.count %></td>
         </tr>
       </table>
-          <% @book.book_comments.each do |book_comment| %>
-              <%= image_tag book_comment.user.get_profile_image(50,50) %>
-              <%= book_comment.comment %>
-              <% if book_comment.user == current_user %>
-                <%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), class: "btn btn-danger", method: :delete %>
-              <% end %><br>
-              <%= book_comment.user.name %><br>
-          <% end %>
-              <%= form_with model: [@book, @book_comment] do |f| %>
-                <%= f.text_area :comment%><br>
-                <%= f.submit "送信" %>
-              <% end %>
+      <div id = "favorite_<%= @book.id %>">
+        <%= render partial: "book_comments/book_comment", locals: {book: @book, book_comment: @book_comment} %>
+      </div>
     </div>
   </div>
 </div>
